--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,9 @@ author = XLAB d.o.o.
 author_email = pypi@xlab.si
 description = Redfish API client for Python
 long_description = file: README.rst
+long_description_content_type = text/x-rst
 license_file = LICENSE
+version = 0.3.10
 classifier =
     Development Status :: 3 - Alpha
     Environment :: Console
