--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Run lint
         run: |
           source venv/bin/activate
-          ruff .
+          ruff check redfish_client tests
 
       - name: Run tests
         run: |
